--- a/bower.json
+++ b/bower.json
@@ -7,6 +7,8 @@
         "font-awesome": "latest",
         "animate.css": "latest",
         "angular": "latest",
-        "angular-ui-router": "latest"
+        "angular-ui-router": "latest",
+        "angular-bootstrap": "latest",
+        "bootbox" : "latest"
     }
 }
